* updates about page

--- a/docs/app/about/page.mdx
+++ b/docs/app/about/page.mdx
@@ -15,9 +15,16 @@ The project is licensed under the [MIT license](https://github.com/HenrikBuesing
 
 ## Attribution
 
+##### Font Awesome
+
 Some components use icons developed by the [Font Awesome team](https://fontawesome.com),
 which are licensed under the [Font Awesome Free license](https://fontawesome.com/license/free).  
 If you haven't already, be sure to check out their extensive collection of high-quality icons.
 
 This package does not rely on Font Awesome's npm packages (e.g., `@fortawesome/fontawesome-svg-core`) in order
 to minimize dependencies. Instead, it incorporates the SVG code of the respective icons.
+
+##### Inspiration & Adaptation
+
+This package is inspired by and adopts smaller parts of some of the most popular packages, like
+[Material UI](https://mui.com/) and [shadcn/ui](https://ui.shadcn.com/). 
