* changes callout type from info to important

--- a/docs/app/docs/page.mdx
+++ b/docs/app/docs/page.mdx
@@ -31,7 +31,7 @@ import {Steps} from 'nextra/components';
   import "@hbuesing/ui-library/index.css";
   ```
 
-  <Callout type="info">
+  <Callout type="important">
     The stylesheet should be imported at the root of your project.
   </Callout>
 
