* adds tablePagination doc entry

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -125,4 +125,9 @@ View all available components and learn how to use them.
     title="Pagination"
     href="/docs/components/pagination"
   />
+
+  <Cards.Card
+    title="TablePagination"
+    href="/docs/components/table-pagination"
+  />
 </Cards>
