* adds documentation for the burger menu

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -122,6 +122,11 @@ View all available components and learn how to use them.
   />
 
   <Cards.Card
+    title="BurgerMenu"
+    href="/docs/components/burger-menu"
+  />
+
+  <Cards.Card
     title="Pagination"
     href="/docs/components/pagination"
   />
